# deep-agent-one

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .replit  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  Claude.md  GITHUB_ISSUES.md  JIRA_SMART_COMMITS.md  LICENSE  PHASE_0_TEST_SUCCESS.md  README.md  TEST_STATUS.md  WEBSOCKET_STREAMING_INVESTIGATION.md  alembic.ini  package.json  pyproject.toml  replit.md  replit.nix  test_astream_events_fix.py  test_perplexity_mcp_direct.py
.claude/agents/: code-review-expert.md  context-engineering-expert.md  debugging-expert.md  testing-expert.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.mcp/: README.md  perplexity.json  playwright.json
alembic/: env.py
backend/: .gitignore  .replit  README.md
backend/data/: checkpoints.db-shm
backend/deep_agent/: README.md  main.py  version.py
backend/deep_agent/agents/: README.md  __init__.py  checkpointer.py  deep_agent.py  prompts.py  (+2 more)
backend/scripts/: dev-ws.sh  dev.sh
backend/tests/: __init__.py  test_tool_execution_direct.py  test_websocket_multiturn_conversation.py
db/migrations/: env.py
docs/: CONTEXT_ENGINEERING_EXPERT.md  PHASE_0_VALIDATION.md  README.md  TEST_RESULTS_2025-11-06.md  TIMEOUT_FIX_VALIDATION_2025-11-06.md  TRACE_2bdaec5e_ANALYSIS.md  WEBSOCKET_CANCELLATION_FIX.md  WEBSOCKET_CONNECTION_FIX_2025-10-29.md  WEBSOCKET_FIX_COMPLETE_SUMMARY.md  manual_websocket_test_results.md  streaming_fix_summary.md
docs/api/: README.md  endpoints.md
docs/architecture/: README.md
docs/development/: README.md  debugging.md  setup.md  testing.md  websocket.md
docs/operations/: README.md  SERVER_STATUS.md
docs/templates/: env.local.template  env.prod.template  env.test.template
docs/user_guides/: README.md
docs/validation/: event_transformation_fix_verification.md  phase_0_websocket_streaming_fixes.md
frontend/: .env.local.example  .env.test  .eslintrc.json  .gitignore  .npmrc  .prettierignore  README.md  components.json  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.test.json  verify-test-setup.sh
frontend/__tests__/: setup.test.ts
frontend/app/: README.md  copilotkit-theme.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: README.md
frontend/contexts/: ConfigProvider.tsx  WebSocketProvider.tsx
frontend/e2e/: chat-workflow.spec.ts  example.spec.ts  hitl-approval.spec.ts  tool-transparency.spec.ts
frontend/hooks/: useAGUIEventHandler.ts  useAgentState.ts  useWebSocket.ts  useWebSocketContext.ts
frontend/lib/: README.md  config.ts  errorEventAdapter.ts  eventValidator.ts  logger.ts  utils.ts
frontend/reports/: ui_test_report.html
frontend/types/: ag-ui.ts  agent.ts  websocket.ts
scripts/: README.md  check-mcp-servers.sh  cleanup-logs.sh  detect-environment.sh  dev.sh  feature-finish.sh  feature-start.sh  fetch-traces.sh  reorganize_issues.py  run_all_tests.sh  security_scan.sh  setup-git-aliases.sh  setup_env.py  start-all.sh  start-backend.sh  start-frontend.sh  start-replit-prod.sh  start-replit.sh  sync-develop.sh  test.sh  test_event_types.py  test_multiturn_websocket.py  test_websocket_events.py  test_websocket_streaming.py  validate_config.py  validate_fixes.py  verify_event_fix.py  websocket-health-check.sh
tests/: README.md  __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  test_context_engineering_expert_e2e.py  test_message_completion.py
tests/fixtures/: README.md  __init__.py
tests/integration/: README.md  __init__.py  test_config_endpoint.py  test_langsmith_fetch.py  test_opik_integration.py  test_tool_event_streaming.py  test_websocket_cancellation.py
tests/mocks/: README.md  __init__.py
tests/scripts/: README.md  fetch_langsmith_trace.py  mock_tool_events.py  test_explicit_tool_usage.py  test_mock_trace_replay.py  test_perplexity_mcp_direct.py  test_tool_execution_direct.py  test_trace_2bdaec5e_replay.py  test_websocket_events.py
tests/ui/: README.md  __init__.py  conftest.py  test_agent_state.py  test_websocket_connection.py
tests/unit/: README.md  test_config.py  test_errors.py  test_logging.py  test_security.py  test_version.py
tests/validation/: __init__.py  conftest.py
(+138 files in other folders)
